Fix vertical overflow

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ ul li:nth-child(16){
     box-shadow: inset -2px 2px 0 rgb(68, 77, 72), inset 2px 0 0 rgb(68, 77, 72);
     overflow-x: auto;
     overflow-y: hidden;
+    text-wrap: nowrap;
 }
 
 .result::-webkit-scrollbar{
